added footer and header and changed navbar default name

--- a/GeneralStore.MVC/Views/Home/Index.cshtml
+++ b/GeneralStore.MVC/Views/Home/Index.cshtml
@@ -1,31 +1,32 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Products";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Products</h1>
+    <p class="lead">Our General Store, located in rural Indiana, is host to a multitude of fine food and items of distinction. <br/>
+    Come browse our products and see what we have for you.</p>
+    <p>
+        @Html.ActionLink("Check Products", "Index", "Product", null, new { @class = "btn btn-primary btn-large" })
+    </p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Click on the navbar button link to Create a Product or click below on the button that says Create a Product
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="/Product/Index">Create a Product &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Get more Information</h2>
+        <p>Click here to learn more about General Store.</p>
+        <p><a class="btn btn-default" href="/Home/About">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Get in Touch</h2>
+        <p>Click here to contact the owners of General Store with your comments/concerns.</p>
+        <p><a class="btn btn-default" href="/Home/Contact">Connect With Us &raquo;</a></p>
     </div>
 </div>
