--- a/GeneralStore.MVC/Views/Home/Contact.cshtml
+++ b/GeneralStore.MVC/Views/Home/Contact.cshtml
@@ -5,10 +5,10 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Indiana Fresh Produce Way<br />
+    Crawfordsville, IN 47933<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    123.456.7890
 </address>
 
 <address>
